# manga-epub-browser

./: .env  .env.sample  Cargo.toml  notes.md  readme.md
.sqlx/: query-05e60afb1104e845bbe8eb4d21edfdc013ad69b09f991f026434cf4b82c58e9e.json  query-0ffd791795e858eee5cab73a8b2615bf684d68e639274398670452c1d3130ef1.json  query-15105c74f377ec19525cd9acb0a108d8bf17c3c767da3f6489c75a1ff8b2f59b.json  query-1b607dd612da3f55763ed7b71f5b12f03490f0af02486173f36bba302fb436c2.json  query-1dbb845d5db1b17467b9eb4e2af9954585f2f3456834ca1c9629617165a60e3f.json  query-31eb02b41c2188d029783d34c30e6ec1ef107899c43ae348d2dbd8298c44c3da.json  query-32fa4ffa77c3dd5421c2d3d3432d9ad7397e60bc823a802e4f24e610166b3f8b.json  query-4f67aab37f2357ecaa706d7ea9d7ccd3230d9c01e71881c7ce7d89d88b5fde05.json  query-50674323ad464e0611a2d140321c126cbe9d485227228bfcb36615176570beef.json  query-56899724801bfebcb75dee5dd72a0c8ce9ebb6878928ff4ad52ccc6f014de9d4.json  query-57c165340dd07c18cd97985a16c0da60e3318b88bd9f890be9e7c8957e316242.json  query-5a55f167f3cd2dd23d326d835fd5a74bf150af6861f2f8cfde334290149402b4.json  query-73bfa02488c66016bfad8d3f6869746777cde181603e6ed817c60cd732e8b174.json  query-a9986fd86c86147fcb30e8fae41c81eea132be0c0880e719d412512fa78fff48.json  query-a9cf96a75104db8f31e2e5096e73f2cc3f97f26497a08271156ee20ff282b32a.json  query-b5e5778dbe6fea81e3abc24d84fc78ae6b19d602f5f2d4a026706c7662ebfcbd.json  query-bb53dd53c94261e9fef27db84c04e41c8268cd978c94ec004421f58f29e5e421.json  query-d42f57b8c9b928657705a99b6d7a09451aa4fb46018761a21c535dc849038f42.json  query-e415fd3fc67ba5b283bf4fa4244f3972b3abef985c2161847b1b2ef728560e5b.json  query-e4b0536d88ec7ebaa7c376e6850e5c97ed3a3659bf1da316ae1fafbd854b5f57.json  query-e976391f66bf915bbd16c00089af607652c8eb646920dc217ff38d8c921b37e1.json  query-efd64206b1a626d79916bd06dab1379f180bbb7cb6239e0dbedf94313664bb8e.json
(+78 files in other folders)
