[package]
name = "manga-epub-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros", "form"] }
axum-extra = { version = "0.9.2", features = ["form"] }
dotenv = "0.15.0"
futures = "0.3.30"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
handlebars = { version = "5.1.1", features = ["dir_source", "script_helper"] }
local-ip-address = "0.6.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
regex = "1.10.3"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_html_form = "0.2.3"
serde_json = "1.0.112"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-sessions = "0.9.1"
url = "2.5.0"
